--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests
+name: Run E2E Tests
 
 on:
   push:
@@ -24,5 +24,13 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npm test:e2e:ci
+
+      - name: Upload report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
 
