--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test:e2e:ci
+        run: npm run test:e2e:ci
 
       - name: Upload report
         uses: actions/upload-artifact@v4
