--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:e2e": "playwright test --headed",
-    "test:e2e:ci": "playwright test --headed",
+    "test:e2e:ci": "playwright test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
